fix layout issues

--- a/app/assets/css/index.scss
+++ b/app/assets/css/index.scss
@@ -1,5 +1,9 @@
 @use "./onyx.scss";
 
+.onyx-app {
+  height: 100dvh;
+}
+
 .app {
   &__h1 {
     font-size: clamp(3.5rem, 9vw, 8rem);
